Fix cog alignment
Bug: T289362

--- a/src/ui/templates/popup/popup.less
+++ b/src/ui/templates/popup/popup.less
@@ -15,6 +15,11 @@
 // The subtracting-triangles method results in a line that
 // is ~0.7px wide, so make it slightly darker to compensate.
 @borderColorPopupPointerNoImage: rgba( 0, 0, 0, 0.07 );
+@previewFooterCogIconInteractionAreaSize: 34px;
+@previewFooterHeight: @popupPadding + @previewFooterCogIconInteractionAreaSize;
+
+// Same as the --pointer-height in popup.less
+@previewPointerHeight: 8px;
 
 .mwe-popups {
 	background: #fff;
@@ -36,7 +41,7 @@
 
 	.mwe-popups-container {
 		color: @colorText;
-		margin-top: -8px;
+		margin-top: -@previewPointerHeight;
 		padding-top: 9px;
 		text-decoration: none;
 
@@ -45,7 +50,6 @@
 			// of the footer covering content
 			padding: 0 @popupPadding @popupPadding;
 			margin: 0;
-			font-size: 10px;
 			position: absolute;
 			bottom: 0;
 			left: 0;
@@ -155,7 +159,7 @@
 
 		.mwe-popups-extract {
 			width: @popupTallWidth;
-			height: 9 * @lineHeight;
+			height: ( 9 * @lineHeight ) - 4px;
 			overflow: hidden;
 			float: left;
 		}
@@ -176,17 +180,18 @@
 		width: @popupWidth;
 
 		.mwe-popups-extract {
-			@minHeight: 2 * @lineHeight;
+			@minHeight: @previewFooterHeight + @previewPointerHeight;
 			// On short summaries, we want to avoid an overlap with the gradient.
-			min-height: @minHeight + 2px;
-			max-height: ( 7 * @lineHeight );
+			min-height: @minHeight;
+			max-height: 202px - @previewFooterHeight - @popupPadding;
 			overflow: hidden;
-			margin-bottom: @minHeight + 4px;
+			margin-bottom: @minHeight;
 			padding-bottom: 0;
 		}
 
 		footer {
-			width: @popupWidth - @cogIconSize;
+			// 2px = border
+			width: @popupWidth - @cogIconSize - 2;
 		}
 	}
 
@@ -195,18 +200,14 @@
 		margin-bottom: @popupPadding;
 
 		.mwe-popups-scroll {
-			// Same as the --pointer-height in popup.less
-			@pointerHeight: 8px;
-			max-height: 403px - 2 * @popupPadding + @pointerHeight;
+			max-height: 403px - 2 * @popupPadding + @previewPointerHeight;
 		}
 	}
 
 	// TODO: Remove when not in Beta any more (T276200)
 	&.flipped-y .mwe-popups-container.footer-empty .mwe-popups-extract,
 	&.flipped-x-y .mwe-popups-container.footer-empty .mwe-popups-extract {
-		// Same as the --pointer-height in popup.less
-		@pointerHeight: 8px;
-		margin-bottom: @popupPadding + @pointerHeight;
+		margin-bottom: @popupPadding + @previewPointerHeight;
 	}
 
 	&.mwe-popups-type-generic,
